tests/errors/control_flow/conditional_truthiness.sad
method my_func() {}
when my_func {
    show("Functions are truthy")
}

model MyModel {}
when MyModel {
    show("Models are truthy")
}
